--- a/analyze.html
+++ b/analyze.html
@@ -152,15 +152,15 @@ The "Analyze" step involves assessing outcomes by modeling how change in ecosyst
 <a name="goals"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Goals</h2>
 <ul>
-<li>Output from successful model runs for each scenario</li>
-<li>Depending on the model or tool used, outputs are likely in multiple formats (e.g., maps, tables, HTML summary, etc.)</li>
+<li>Produce early outputs such as maps or summary tables to characterize the current distribution of ecosystem services</li>
+<li>Through an iterative process (<b><a href="iterate.html">Iterate</a></b> step), assess ES outcomes under plausible alternative future scenarios</li>
 </ul>
 <a name="tips"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tips_sm.png" align="left"><h2>&nbsp;&nbsp;Tips</h2>
 <ul>
-<li>Before using a new tool (or model) make sure you understand its underlying assumptions and limitations</li>
-<li>When deciding which tool(s) to use, it can be helpful to examine existing use-cases where the tool has already been applied</li>
-<li>Explore our compilation of individual use-cases (below) to help find a tool that matches your project needs</li>
+<li>Before applying any decison-support tool make sure to understand its underlying assumptions and limitations</li>
+<li>When deciding which tool(s) to use, examine existing use-cases where the tool has already been applied</li>
+<li>Explore our compilation of NatCap MSP use-cases (below) to find a tool that suits your project needs</li>
 </ul>
 <a name="tools"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tools_sm.png" align="left"><h2>&nbsp;&nbsp;MSP Decision-Support Tools and Use-Cases</h2>
@@ -213,8 +213,8 @@ Below we list some freely-available MSP analysis toolkits. Click on the tool's n
 <img src="img/headers/use-cases_sm.png" align="left"><h2>&nbsp;&nbsp;Use-Cases</h2>
 Use the expand [+] button to learn more about this analyze step in the context of select NatCap use-cases.
 <p></p>
-<h4>Barbados</h4><p>xxx</p>
+<h4>Belize</h4><p>xxx</p>
 <h4>Vancouver Island</h4><p>xxx</p>
-<h4>Mozambique</h4><p>xxx</p>
+<h4>California</h4><p>xxx</p>
 </body>
 </html>
