--- a/communicate.html
+++ b/communicate.html
@@ -152,16 +152,16 @@ Once results have been synthesized, it is important to offer targeted communicat
 <a name="goals"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Goals</h2>
 <ul>
-<li>Reports and other synthesis projects (maps, presentations, etc.) geared towards the intended audience and decision-context</li>
-<li>Project wrap-up workshop and/or meetings</li>
-<li>Online repository (e.g., portal, maps) to archive project information</li>
+<li>Produce reports and other synthesis projects (e.g, executive summary, presentations, online maps, etc.) tailored to intended audience and decision-context</li>
+<li>Create an online repository (e.g., mapping portal, data download) to archive and dissementate key project information</li>
+<li>Organize a workshop or meeting to share final results and conclude the project</li>
 </ul>
 <a name="tips"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tips_sm.png" align="left"><h2>&nbsp;&nbsp;Tips</h2>
 <ul>
-<li>Clearly communicate key project information (e.g., reports, maps, presentations, etc.)</li>
-<li>Be honest about the science and uncertainty, particularly when not everything can be reduced to a single currency and when money is not what everyone cares about, and to acknowledge that not everything needs to be valued</li>
+<li>Clearly convey relevant information using appropriate communication mediums (technical report vs. video campaign)</li>
 <li>Boiling everything down to a number does not always make a policy better or the discussion more scientific</li>
+<li>Be honest about the science and underlying uncertainty, particularly when not everything can be reduced to a single currency or when money is the only unit of value</li>
 </ul>
 <a name="gallery"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/gallery_sm.png" align="left"><h2>&nbsp;&nbsp;Gallery</h2>
@@ -188,8 +188,8 @@ Visit our <a href="http://www.23hq.com/msp_concierge"><b>Visualization Gallery</
 <img src="img/headers/use-cases_sm.png" align="left"><h2>&nbsp;&nbsp;Use-Cases</h2>
 Use the expand [+] button to learn more about this communicate step in the context of select NatCap use-cases.
 <p></p>
-<h4>Barbados</h4><p>xxx</p>
 <h4>Vancouver Island</h4><p>xxx</p>
 <h4>Belize</h4><p>xxx</p>
+<h4>California</h4><p>xxx</p>
 </body>
 </html>
