--- a/iterate.html
+++ b/iterate.html
@@ -30,12 +30,14 @@ The following is a diagram of the approach for ecosystem service assessment prop
 <a name="goals"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Goals</h2>
 <ul>
-<li>xxx</li>
+<li>Engage stakeholders and local experts (e.g., scientists, NGOs, member of civil society) to share preliminary results</li>
+<li>Revisit previous steps in the approach with expert feedback to refine and improve project information</li>
 </ul>
 <a name="tips"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tips_sm.png" align="left"><h2>&nbsp;&nbsp;Tips</h2>
 <ul>
-<li>xxx</li>
+<li>Iteration can offer valuable information even when you only have preliminary data and scenarios</li>
+<li>Take advantage of this step early in the project to identify additional data needs, produce initial results to show to local contacts, and get comfortable with the mechanics of this approach and applying MSP decision-support tools</li>
 </ul>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/faq_sm.png" align="left"><h2>&nbsp;&nbsp;Frequently Asked Questions (FAQ)</h2>
@@ -43,6 +45,6 @@ The following is a diagram of the approach for ecosystem service assessment prop
 <i>A: xxx</i><br>
 <p></p>
 <b>Q: How many iterations (times through the 6 steps) are typical for an MSP project?</b><br>
-<i>A: xxx</i><br>
+<i>A: In short, it varies.  There are xxx</i><br>
 </body>
 </html>
