--- a/links.html
+++ b/links.html
@@ -138,8 +138,20 @@ window.onload = function (evt) {
 </head>
 <body>
 <img src="img/headers/links_sm.png" align="left"><h1>&nbsp;&nbsp;Links</h1>
-Use the expand [+] button to explore <b>readings and other online resources for each MSP step</b>.<br>Cross-cutting links (bridging multiple steps) are included at the bottom of this page.
+Use the expand [+] button to explore <b>readings and other online resources for each MSP step</b>.
 <p></p>
+<h4>Cross-Cutting Steps</h4>
+<ul>
+<li>Beck, M., et al. "Best practices for marine spatial planning." The Nature Conservancy, Arlington, VA (2009): 25. <a href="http://www.marineplanning.org/pdf/msp_best_practices.pdf" target="_blank">http://www.marineplanning.org/pdf/msp_best_practices.pdf</a></li>
+<li>Rosenthal, Amy, et al. "Process matters: a framework for conducting decision-relevant assessments of ecosystem services." <i>International Journal of Biodiversity Science, Ecosystem Services & Management</i> (2014): 1-15. <a href="docs/Rosenthal_etal_2014_IJBSESM.pdf" target="_blank">doi:10.1080/21513732.2014.966149</a></li>
+<li>Ruckelshaus, Mary, et al. "Notes from the field: Lessons learned from using ecosystem service approaches to inform real-world decisions." <i>Ecological Economics</i> (2013). <a href="docs/Ruckelshaus_etal_2014_EE.pdf" target="_blank">doi:10.1016/j.ecolecon.2013.07.009</a></li>
+<li><a href="http://openchannels.org/" target="_blank"><b>OpenChannels</b></a> - An online community of ocean planners and managers sharing experience, knowledge, and advice with peers</li>
+<li><a href="http://www.ebmtools.org/" target="_blank"><b>EBM Tools Network</b></a> - Offers tools, training and webinars on coastal and marine planning and management</li>
+<li><a href="http://marineecosystemservices.org/" target="_blank"><b>Marine Ecosystem Services Partnership</b></a> - A searchable database of nearly 900 studies on marine ES valuation</li>
+<li><a href="http://bluesolutions.info/solutions/" target="_blank"><b>Blue Solutions</b></a> - A database of solutions to marine and coastal challenges that are impactful, scalable, and can be replicated</li>
+<li><a href="http://www.cmspadvancement.com/" target="_blank"><b>CMSP Advancement Training</b></a> - Free training in the United States for coastal managers and MSP practitioners</li>
+</ul>
+<div class="hr dotted clearfix">&nbsp;</div>
 <h4>Scope</h4>
 <ul>
 <li>Douvere, F. (2008). "The importance of marine spatial planning in advancing ecosystem-based sea use management." <i>Marine Policy</i>, 32(5), 762-771. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X0800064X" target="_blank">doi:10.1016/j.marpol.2008.03.021</a></li>
@@ -172,6 +184,7 @@ Use the expand [+] button to explore <b>readings and other online resources for 
 <div class="hr dotted clearfix">&nbsp;</div>
 <h4>Analyze</h4>
 <ul>
+<li>Coleman, H., et al. "Decision guide: selecting decision support tools for marine spatial planning." The Center for Ocean Solutions, The Woods Institute for the Environment, Stanford University, California (2011). <a href="http://pacmara.org/tikiwiki/tiki-download_file.php?fileId=233" target="_blank">http://pacmara.org/tikiwiki/tiki-download_file.php?fileId=233</a></li>
 <li>Guerry, Anne D., et al. "Modeling benefits from nature: using ecosystem services to inform coastal and marine spatial planning." <i>International Journal of Biodiversity Science, Ecosystem Services & Management</i> 8.1-2 (2012): 107-121. <a href="http://www.tandfonline.com/doi/abs/10.1080/21513732.2011.647835#.VIY3jNLF8aU" target="_blank">doi:10.1080/21513732.2011.647835</a></li>
 <li>Kim, Choong-Ki, et al. "Catching the Right Wave: Evaluating Wave Energy Resources and Potential Compatibility with Existing Marine and Coastal Uses." <i>PloS one</i> 7.11 (2012): e47598. <a href="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0047598#pone-0047598-g008" target="_blank">doi:10.1371/journal.pone.0047598</a></li>
 <li>Stelzenmüller, Vanessa, et al. "Practical tools to support marine spatial planning: a review and some prototype tools." <i>Marine Policy</i> 38 (2013): 214-227. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X12001364" target="_blank">doi:10.1016/j.marpol.2012.05.038</a></li>
@@ -193,18 +206,6 @@ Use the expand [+] button to explore <b>readings and other online resources for 
 <li>Merrie, Andrew, and Per Olsson. "An innovation and agency perspective on the emergence and spread of Marine Spatial Planning." <i>Marine Policy</i> 44 (2014): 366-374. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X13002315" target="_blank">doi:10.1016/j.marpol.2013.10.006</a></li>
 <li>Waite, Richard, et al. "Coastal capital: ecosystem valuation for decision making in the Caribbean</a>." World Resources Institute, 2014. <a href="http://eprints.soton.ac.uk/362289/" target="_blank">http://eprints.soton.ac.uk/id/eprint/362289</a></li>
 <li><a href="http://cartodb.com/" target="_blank"><b>CartoDB.com</b></a> and <a href="http://mapbox.com/" target="_blank"><b>Mapbox.com</b></a> - Free online tools for building professional web maps</li>
-</ul>
-<div class="hr dotted clearfix">&nbsp;</div>
-<h4>Cross-Cutting Steps</h4>
-<ul>
-<li>Rosenthal, Amy, et al. "Process matters: a framework for conducting decision-relevant assessments of ecosystem services." <i>International Journal of Biodiversity Science, Ecosystem Services & Management</i> (2014): 1-15. <a href="docs/Rosenthal_etal_2014_IJBSESM.pdf" target="_blank">doi:10.1080/21513732.2014.966149</a></li>
-<li>Ruckelshaus, Mary, et al. "Notes from the field: Lessons learned from using ecosystem service approaches to inform real-world decisions." <i>Ecological Economics</i> (2013). <a href="docs/Ruckelshaus_etal_2014_EE.pdf" target="_blank">doi:10.1016/j.ecolecon.2013.07.009</a></li>
-<li><a href="http://openchannels.org/" target="_blank"><b>OpenChannels</b></a> - An online community of ocean planners and managers sharing experience, knowledge, and advice with peers</li>
-<li><a href="http://www.ebmtools.org/" target="_blank"><b>EBM Tools Network</b></a> - Offers tools, training and webinars on coastal and marine planning and management</li>
-<li><a href="http://pacmara.org/tikiwiki/tiki-download_file.php?fileId=233" target="_blank"><b>Decision Guide: Selecting decision support tools for marine spatial planning</b></a> - Center for Ocean Solutions (COS) and PacMARA</li>
-<li><a href="http://marineecosystemservices.org/" target="_blank"><b>Marine Ecosystem Services Partnership</b></a> - A searchable database of nearly 900 studies on marine ES valuation</li>
-<li><a href="http://bluesolutions.info/solutions/" target="_blank"><b>Blue Solutions</b></a> - A database of solutions to marine and coastal challenges that are impactful, scalable, and can be replicated</li>
-<li><a href="http://www.cmspadvancement.com/" target="_blank"><b>CMSP Advancement Training</b></a> - Free training in the United States for coastal managers and MSP practitioners</li>
 </ul>
 <a class="float right" href="#">top</a>
 </body>
