--- a/reg_msp_data.html
+++ b/reg_msp_data.html
@@ -28,7 +28,7 @@ var geojson = {
         type: 'Feature',
         properties: {
             title: 'Northeast Ocean Data Portal',
-            'marker-color': '#3182bd',
+            'marker-color': '#19a9e5',
             'marker-size': 'small',
             url: 'http://www.northeastoceandata.org/'
         },
@@ -41,7 +41,7 @@ var geojson = {
         type: 'Feature',
         properties: {
             title: 'Biodiversity and Environmental Resource Data System of Belize (BERDS)',
-            'marker-color': '#3182bd',
+            'marker-color': '#19a9e5',
             'marker-size': 'small',
             url: 'http://www.biodiversity.bz/'
         },
@@ -54,7 +54,7 @@ var geojson = {
         type: 'Feature',
         properties: {
             title: 'Mid-Atlantic Ocean Data Portal (MARCO)',
-            'marker-color': '#3182bd',
+            'marker-color': '#19a9e5',
             'marker-size': 'small',
             url: 'http://portal.midatlanticocean.org/portal/'
         },
@@ -67,7 +67,7 @@ var geojson = {
         type: 'Feature',
         properties: {
             title: 'California DFW: Marine Region GIS Unit',
-            'marker-color': '#3182bd',
+            'marker-color': '#19a9e5',
             'marker-size': 'small',
             url: 'http://www.dfg.ca.gov/marine/gis/'
         },
@@ -80,7 +80,7 @@ var geojson = {
         type: 'Feature',
         properties: {
             title: 'British Columbia Marine Conservation Analysis (BCMCA)',
-            'marker-color': '#3182bd',
+            'marker-color': '#19a9e5',
             'marker-size': 'small',
             url: 'http://bcmca.ca/maps-data/overview/'
         },
@@ -93,7 +93,7 @@ var geojson = {
         type: 'Feature',
         properties: {
             title: 'Coral Triangle (CT) Atlas',
-            'marker-color': '#3182bd',
+            'marker-color': '#19a9e5',
             'marker-size': 'small',
             url: 'http://ctatlas.reefbase.org/'
         },
@@ -106,7 +106,7 @@ var geojson = {
         type: 'Feature',
         properties: {
             title: 'Africa Marine Atlas',
-            'marker-color': '#3182bd',
+            'marker-color': '#19a9e5',
             'marker-size': 'small',
             url: 'http://omap.africanmarineatlas.org/index.htm'
         },
@@ -119,7 +119,7 @@ var geojson = {
         type: 'Feature',
         properties: {
             title: 'Alaska Shorezone Coastal Mapping and Imagery',
-            'marker-color': '#3182bd',
+            'marker-color': '#19a9e5',
             'marker-size': 'small',
             url: 'http://alaskafisheries.noaa.gov/shorezone/'
         },
@@ -132,7 +132,7 @@ var geojson = {
         type: 'Feature',
         properties: {
             title: 'Australian Marine Spatial Information System (AMSIS)',
-            'marker-color': '#3182bd',
+            'marker-color': '#19a9e5',
             'marker-size': 'small',
             url: 'http://www.ga.gov.au/scientific-topics/marine/jurisdiction/amsis'
         },
@@ -145,7 +145,7 @@ var geojson = {
         type: 'Feature',
         properties: {
             title: 'Baltic Sea Bathymetry Database',
-            'marker-color': '#3182bd',
+            'marker-color': '#19a9e5',
             'marker-size': 'small',
             url: 'http://data.bshc.pro/'
         },
@@ -158,7 +158,7 @@ var geojson = {
         type: 'Feature',
         properties: {
             title: 'National Elevation Dataset (NED)',
-            'marker-color': '#3182bd',
+            'marker-color': '#19a9e5',
             'marker-size': 'small',
             url: 'http://ned.usgs.gov/'
         },
