--- a/scope.html
+++ b/scope.html
@@ -194,10 +194,10 @@ This step serves to link the decisions, decision-makers, and scientific support 
 <li>Foley, Melissa M., et al. "Guiding ecological principles for marine spatial planning." <i>Marine Policy</i> 34.5 (2010): 955-966. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X10000436" target="_blank">doi:10.1016/j.marpol.2010.02.001</a></li>
 <li>Ehler, Charles, and Fanny Douvere. "Marine spatial planning, a step-by-step approach towards ecosystem-based management." (2009). <a href="http://hdl.handle.net/1834/4475
 " target="_blank">http://hdl.handle.net/1834/4475</a></li>
-<li><a href="http://openchannels.org/" target="_blank"><b>OpenChannels</b></a> - An online community of ocean planners and managers sharing experience, knowledge, and advice with peers</li>
+<li><a href="http://openchannels.org/" target="_blank"><b>OpenChannels</b></a> - An online community of ocean planners and managers sharing experience, knowledge, and advice</li>
 <li><a href="http://searchmesh.org/default.aspx?page=1931" target="_blank"><b>MESH Scoping Tool</b></a> - A Flash interactive tool and guidance for undertaking an ocean  mapping/survey project</li>
 <li><a href="http://marineecosystemservices.org/" target="_blank"><b>Marine Ecosystem Services Partnership</b></a> - A searchable database of nearly 900 studies on marine ES valuation</li>
-<li><a href="http://bluesolutions.info/solutions/" target="_blank"><b>Blue Solutions</b></a> - A database of solutions to marine and coastal challenges that are impactful, scalable, and can be replicated</li>
+<li><a href="http://bluesolutions.info/solutions/" target="_blank"><b>Blue Solutions</b></a> - A database of solutions to coastal-marine challenges that are impactful, scalable, and can be replicated</li>
 <li><a href="http://www.cmspadvancement.com/" target="_blank"><b>CMSP Advancement Training</b></a> - Free training in the United States for coastal managers and MSP practitioners</li>
 </ul>
 <p></p>
@@ -208,6 +208,7 @@ Use the expand [+] button to learn more about this scoping step in the context o
 <h4>Barbados</h4><p> To aid in a coastal management plan for Barbados, NatCap worked with key organizational partners to create a formal literature review and gap analysis for review by the Inter-American Development Bank (IDB).  The report outlined the provisioning, regulating, and cultural ecosystem services of interest and identified threats to these services.  The project team then collected, reviewed, and synthesized available literature and spatial data.  In addition to this synthesis, preliminary runs of select InVEST models were used to identify data gaps.  The literature review and data gap assessment not only organized key information, but also served as a method to gain consensus about the most important ecosystem services and the steps needed to complete a marine spatial plan.</p>
 <h4>Vancouver Island</h4><p>xxx</p>
 <h4>Belize</h4><p>xxx</p>
-<h4>New England</h4><p>xxx</p>
+<h4>Mozambique</h4><p>xxx</p>
+<h4>California</h4><p>xxx</p>
 </body>
 </html>
