--- a/synthesize.html
+++ b/synthesize.html
@@ -152,34 +152,32 @@ Results from tools used in the previous step are often not in a usable format. S
 <a name="goals"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Goals</h2>
 <ul>
-<li>Qualitative and quantitative comparisons for each ecosystem service of interest under each scenario</li>
-<li>Maps, tables, and other visuals that help to summarize scenarios and can be used to communicate results</li> 
+<li>Synthesize outputs from <b><a href="analyze.html">Analyze</a></b> step to compare ecosystem service delivery under each scenario</li>
+<li>Summarize project information to be included in the communicate and apply phase (<b><a href="communicate.html">Communicate</a></b> step)</li> 
 </ul>
 <a name="tips"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tips_sm.png" align="left"><h2>&nbsp;&nbsp;Tips</h2>
 <ul>
-<li>Maps, charts, and other synthesis products should be <b>clear and simple</b></li>
-<li>Ask a colleague or friend (who is not familiar with your project) to review visuals and offer feedback
+<li>Maps, charts, table and other synthesis information should be <b>clear and easy to understand</b></li>
+<li><b>Avoid jargon</b> and including superfluous information that will confuse your audience</li>
+<li>Use metrics and visuals that have been determined to resonate with stakeholders and policy-/decision-makers</b></li>
+<li>Ask a colleague or friend (who is not familiar with your project) to review synthesis products and offer feedback
+<li>Visit our <a href="gallery.html"><b>Gallery</b></a> to explore examples of design techniques NatCap and partners have used to translate science information into effective visuals</li>
 </ul>
-<a name="gallery"></a><div class="hr dotted clearfix">&nbsp;</div>
-<img src="img/headers/gallery_sm.png" align="left"><h2>&nbsp;&nbsp;Gallery</h2>
-Visit our <a href="http://www.23hq.com/msp_concierge"><b>Visualization Gallery</b></a> to explore examples of design techniques NatCap has used to translate science information into effective visuals.  Many of these synthesis products have been used to inform the MSP process around the world.
 <p></p>
 <a name="tools"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tools_sm.png" align="left"><h2>&nbsp;&nbsp;Helper Tools</h2>
 <img src="img/off_ramp.png"><br>
-Synthesizing spatial outputs from decision-support tools can be challenging.  NatCap has created helper tools (or "off-ramps") to enable InVEST users to quickly explore results, perform basic post-processing, and assess outcomes without the need for a desktop GIS.
-<p></p>
-The following are links to examples of InVEST helper tools: 
+Synthesizing spatial outputs from decision-support tools can be challenging.  NatCap has created helper tools (or "off-ramps") to enable InVEST users to quickly explore results, perform basic post-processing, and assess outcomes without the need for a desktop GIS.  The following are links to examples of InVEST helper tools: 
 <ol>
-<li><a href="http://vulpes.sefs.uw.edu/ttapp/cv-dash.php" target="_blank"><b>InVIEW</b></a> is a web app that automates common synthesis and visualization tasks that may be necessary after each InVEST model run. InVIEW displays the results of your latest model run in a web browser.  The tool allows InVEST users to easily explore and extracting meaning from raw results without the use of a desktop GIS.  With InVIEW, a user can:
-<br>&#8226; View InVEST outputs on a fully interactive, Google Earth-style, map
-<br>&#8226; Explore spatial patterns (e.g., ecosystem service hotspots)
-<br>&#8226; Compare scenarios and highlight changes over time
-<br>&#8226; Quickly diagnose issues and refine InVEST model inputs</li>
+<li><a href="http://vulpes.sefs.uw.edu/ttapp/cv-dash.php" target="_blank"><b>InVIEW</b></a> is a web app that automates common synthesis and visualization tasks that may be necessary after running InVEST. InVIEW displays the results of your latest model run in a web browser.  The tool allows InVEST users to easily explore and extract meaning from raw results without the need for a desktop GIS.  With InVIEW, users can:
+<br>&#8226; &nbsp;View InVEST outputs on a fully interactive, Google Earth-style, map
+<br>&#8226; &nbsp;Explore spatial patterns (e.g., ecosystem service hotspots)
+<br>&#8226; &nbsp;Compare scenarios and highlight changes over time
+<br>&#8226; &nbsp;Quickly diagnose issues and refine InVEST model inputs</li>
 <li><a href="http://ncp-dev.stanford.edu/~dataportal/nightly-build/release_tip/release_tip/documentation/" target="_blank"><b>InVEST 3.1.0 User's Guide</b></a> - Every chapter includes a "Interpreting Results" section that defines intermediate and final outputs of each model</li>
 <li><a href="http://tinyurl.com/cctd-belize" target="_blank"><b>Identifying Opportunities for Climate-Compatible Tourism Development in Belize</b></a><br>This online analytics tool enables users to summarize results from the <a href="http://www.naturalcapitalproject.org/models/coastal_vulnerability.html" target="_blank">InVEST coastal vulnerability model</a> through a simple website. Model outputs have been linked to 2010 population census and tourism expenditure data and then visualized as maps and graphs.</li> 
-<li><a href="NatCap_marineHelperTools.zip" target="_blank"><b>Marine InVEST Helper Tools</b></a> - A GIS toolbox for pre- and post-processing data to be used with InVEST models (<i>requires ArcGIS 10.x license</i>)</li>
+<li><a href="docs/NatCap_marineHelperTools.zip" target="_blank"><b>Marine InVEST Helper Tools</b></a> - A GIS toolbox for pre- and post-processing data to be used with InVEST models (<i>requires ArcGIS 10.x license</i>)</li>
 <li>Visit our <a href="http://ncp-yamato.stanford.edu/natcapforums/categories/experimental-software-tools" target="_blank"><b>Experimental Software Tools</b></a> discussion thread for synthesis helper tools that are currently under development</li>
 </ol>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
@@ -202,8 +200,8 @@ The following are links to examples of InVEST helper tools:
 <img src="img/headers/use-cases_sm.png" align="left"><h2>&nbsp;&nbsp;Use-Cases</h2>
 Use the expand [+] button to learn more about this synthesize step in the context of select NatCap use-cases.
 <p></p>
-<h4>Barbados</h4><p>xxx</p>
 <h4>Vancouver Island</h4><p>xxx</p>
 <h4>Belize</h4><p>xxx</p>
+<h4>California</h4><p>xxx</p>
 </body>
 </html>
