--- a/welcome.html
+++ b/welcome.html
@@ -37,9 +37,11 @@ This website was designed to help answer <b>frequently asked questions</b> about
 <div class="hr dotted clearfix">&nbsp;</div>
 <h2>What are MSP and ecosystem services?</h2>
 <b>Marine spatial planning</b> (MSP) is a tool for <b>minimizing conflicts among users and reducing impacts on ecosystems</b>.  Increasing demands on ocean space for diverse uses, including tourism, recreation, fishing, shipping, national security, oil and gas exploration and renewable energy (wind and wave), have led to more conflicts among users as well as additional impacts on already stressed ocean ecosystems (Lubchenco and Petes 2010, Douvere 2008, United Nations Environment Programme 2006).
+<p></p>
+For more information about the relationships between <b>impacts &#8596; habitats &#8596; benefits</b>, click on the "Human Uses" tab below to rotate the scrolling image.
 <p></p><br><br>
 <ul id="folio_scroller">
-<li><span>This diagram depicts potential conflicts among human use activities in Belize (a tropical system).  Information contained within this website can also be applied to MSP in temperate and arctic systems. <i>Image courtesy of the </b><a href="http://www.healthyreefs.org" target="_blank">Healthy Reefs Initiative</a></i></span><img alt="" src="img/folio_4.png" /></a></li>
+<li><span>This diagram depicts potential conflicts among human use activities in a tropical system like Belize.  Information contained within this website can also be applied to MSP in temperate and arctic systems. <i>Images courtesy of the </b><a href="http://www.healthyreefs.org" target="_blank">Healthy Reefs Initiative</a></i></span><img alt="" src="img/folio_4.png" /></a></li>
 <li><span>Human use activities provide important economic and social benefits to people.</span><img alt="" src="img/folio_1.png" /></a></li>
 <li><span>MSP aims to maximize economic opportunities while minimizing environmental degradation.  Spatial planning that considers a range of stakeholder values has the potential to reduce ocean conflicts and maintain these important benefits provided by ecosystems.</span><img alt="" src="img/folio_3.png" /></a></li>
 <li><span>Healthy coastal-marine ecosystems such as mangroves, corals and seagrasses provide important benefits (or "ecosystem services") to people.  Poor ocean planning, however, can pose serious risk to these habitats, resulting in less services.</span><img alt="" src="img/folio_2.png" /></a></li>
@@ -61,7 +63,7 @@ There are several suggested approaches which converge around these common themes
   <area shape="circle" coords="736,86,55" href="communicate.html" alt="Communicate">
 </map>
 </center>
-We encourage you to visit the six steps of our suggested approach by clicking the links on the left panel menu or conceptual diagram (above).<br><b><u>For each step</u></b> we provide the following information:
+We encourage you to visit the six steps of our suggested approach by clicking the links on the left panel menu or conceptual diagram (above). <b><u>For each step</u></b> we provide the following information:
 <p></p>
 <center>
 <table>
