--- a/data.html
+++ b/data.html
@@ -154,16 +154,16 @@ Since MSP is often multidisciplinary in nature, there can be substantial spatial
 <a name="goals"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Goals</h2>
 <ul>
-<li>Preliminary spatial layers that can be refined through iterative analysis and synthesis (<i>early</i>)</li>
-<li>Working database to use as inputs to MSP decision-support tools (<i>middle of project</i>)</li>
-<li>Final database to share with local public and broader community (<i>conclusion</i>)</li>
+<li>Gather coarse spatial information that can be refined and improved through iterative analysis and knowledge exchange</li>
+<li>Compile and curate a "working" database to use as inputs to MSP decision-support tools</li>
+<li>Finalize a shareble database at the conclusion of the project</li>
 </ul>
 <a name="tips"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tips_sm.png" align="left"><h2>&nbsp;&nbsp;Tips</h2>
 <ul>
 <li>Don’t spend too much time initially on this step</li>
-<li>Use global/regional datasets to get a 'lay of the land' and identify data gaps</li>
-<li>Show preliminary results to experts and stakeholder (e.g., scientists, local NGOs); use feedback to refine information (<a href="iterate.html"><b>Iterate</b></a> step)</li>
+<li>Use global or regional data sources to get a 'lay of the land' and identify data gaps/needs</li>
+<li>Show preliminary datasets to stakeholders; use expert feedback to refine information (see <a href="iterate.html"><b>Iterate</b></a> step)</li>
 <li>If funding permits, consider adding a dedicated GIS/data analyst to your team</li>
 </ul>
 <a name="databases"></a><div class="hr dotted clearfix">&nbsp;</div>
@@ -177,8 +177,8 @@ We organize global MSP datasets into the following thematic categories. Click on
 <li><a href="http://data.unep-wcmc.org/" target="_blank"><b>UNEP Ocean Data Viewer</b></a> (1,2) Data for the conservation of <b>marine and coastal biodiversity</b></li>
 <li><a href="http://www.naturalearthdata.com/" target="_blank"><b>Natural Earth</b></a> (1,2) A <b>cartographic dataset</b> available at 1:10m, 1:50m, and 1:110 million scales</li>
 <li><a href="http://marinecadastre.gov/" target="_blank"><b>NOAA Multipurpose Marine Cadaster</b></a> (1,2) Data for the <b>offshore energy and marine planning communities</b></li>
-<li><a href="https://data.nceas.ucsb.edu/" target="_blank"><b>NCEAS Data Repository</b></a> (1,2) Research data sets collected and collated as part of NCEAS funded activities</li>
-<li><a href="http://marinexplore.org/browse/" target="_blank"><b>MarineExplore.org</b></a> (1,2) The world's <b>ocean data</b> at your fingertips; access measurements and create datasets in minutes</li>
+<li><a href="https://data.nceas.ucsb.edu/" target="_blank"><b>NCEAS Data Repository</b></a> (1,2) Research datasets collected and collated as part of NCEAS funded activities</li>
+<li><a href="http://marinexplore.org/browse/" target="_blank"><b>MarineExplore.org</b></a> (1,2) The world's <b>ocean data</b> at your fingertips; access measurements and create datasets</li>
 <li><a href="http://www.wri.org/our-work/project/reefs-risk" target="_blank"><b>Reefs at Risk Database</b></a> (1) A global database of <b>coral reefs</b> and threats from a wide range of human activities</li>
 <li><a href="http://www.bluehabitats.org/" target="_blank"><b>Blue Habitats</b></a> (1) Home to the global <b>seafloor geomorphic features map</b></li>
 <li><a href="http://openfisheries.org/" target="_blank"><b>OpenFisheries.org</b></a> (1) A platform for aggregating <b>global fishery data</b></li>
@@ -204,7 +204,7 @@ Pre-processing spatial and tabular data is a challenging but necessary step befo
 <ol>
 <li><a href="http://naturalcapitalproject.org/pubs/InVEST_DataRequirements_June2014.xlsx" target="_blank"><b>InVEST 3.x Data Requirements</b></a> - A sortable spreadsheet listing the required and optional inputs for each InVEST model</li>
 <li><a href="http://ncp-dev.stanford.edu/~dataportal/nightly-build/release_tip/release_tip/documentation/" target="_blank"><b>InVEST 3.1.0 User's Guide</b></a> - Every chapter includes a "Data Needs" section outlining input and formatting requirements for each model</li>
-<li><a href="NatCap_marineHelperTools.zip" target="_blank"><b>Marine InVEST Helper Tools</b></a> - A GIS toolbox for pre- and post-processing data to be used with InVEST models (<i>requires ArcGIS 10.x license</i>)</li>
+<li><a href="docs/NatCap_marineHelperTools.zip" target="_blank"><b>Marine InVEST Helper Tools</b></a> - A GIS toolbox for pre- and post-processing data to be used with InVEST models (<i>requires ArcGIS 10.x license</i>)</li>
 <li><a href="http://ncp-yamato.stanford.edu/natcapforums/categories/experimental-software-tools" target="_blank"><b>Experimental Software Tools</b></a> - A discussion thread where NatCap staff and members of the broader community share details about new helper tools</li>
 </ol>
 <p></p>
